# datacell

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md  TODO.md
examples/: EXAMPLES_SUMMARY.md  QUICK_REFERENCE.md  README.md  TESTING_GUIDE.md  api_usage.rs  duplicates.csv  financial_data.csv  integration_tests.rs  lookup.csv  numbers.csv  run_tests.py  sales.csv  test_all_capabilities.sh  test_data_generator.sh  validation_rules.json
examples/test_output/: .datacell.toml  all_sheets.json  completions.bash  describe.md  dtypes.txt  employees.md  head.txt  info.txt  read_csv.txt  sample.txt  sheets_list.txt  tail.txt  unique.txt  value_counts.txt
examples/test_output/json/: employees.json  profile.json  validation_report.json
homebrew/: INSTALL.md  PUBLISHING.md  README.md  setup-tap.sh
homebrew/Formula/: datacell.rb
src/: anomaly.rs  api.rs  cli.rs  columnar.rs  columnar.rs.bak  common.rs  config.rs  converter.rs  csv_handler.rs  encryption.rs  error.rs  error_traits.rs  excel.rs  format_detector.rs  formula.rs  geospatial.rs  google_sheets.rs  handler_registry.rs  helpers.rs  lib.rs  lineage.rs  main.rs  main_old.rs  mcp.rs  mocks.rs  operations.rs  plugins.rs  profiling.rs  quality.rs  streaming.rs  text_analysis.rs  timeseries.rs  traits.rs  types.rs  validation.rs  workflow.rs
src/cli/: format.rs  handler.rs  mod.rs
src/cli/commands/: advanced.rs  advanced_handler.rs  io.rs  mod.rs  pandas.rs  transform.rs
src/cli/commands/advanced/: batch.rs  chart.rs  encryption.rs  mod.rs  plugins.rs  profile.rs  utils.rs  validation.rs
src/columnar/: mod.rs  parquet.rs
src/excel/: chart.rs  mod.rs  reader.rs  types.rs  writer.rs  xlsx_writer.rs  xlsx_writer.rs.bak
src/excel/xlsx_writer/: mod.rs  streaming.rs  types.rs  xml_gen.rs
src/formula/: evaluator.rs  functions.rs  mod.rs  parser.rs
src/operations/: core.rs  mod.rs  pandas.rs  stats.rs  transform.rs  types.rs
tests/: generate_examples.rs  test_advanced_excel.rs  test_basic.rs  test_cli_integration.rs  test_columnar.rs  test_config.rs  test_converter.rs  test_csv_handler.rs  test_encryption.rs  test_error.rs  test_excel.rs  test_formula.rs  test_google_sheets.rs  test_handler_registry.rs  test_operations.rs  test_plugins.rs  test_streaming.rs  test_traits.rs  test_xlsx_validation.rs
