[package]
name = "xls-rs"
version = "0.1.5"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/yingkitw/xls-rs"
readme = "README.md"
homepage = "https://github.com/yingkitw/xls-rs"
documentation = "https://docs.rs/xls-rs"
keywords = ["csv", "excel", "spreadsheet", "parquet", "cli"]
categories = [
    "command-line-utilities",
    "encoding",
    "data-structures",
    "parsing",
    "development-tools"
]
description = """
A powerful CLI tool and library for spreadsheet manipulation with pandas-style operations.
Supports CSV, Excel (XLSX, XLS, ODS), Parquet, and Avro formats with formula evaluation,
data transformation, and comprehensive analytics capabilities.
"""

[[bin]]
name = "xls-rs"
path = "src/main.rs"

[lib]
name = "xls_rs"
path = "src/lib.rs"

[dependencies]
rmcp = { version = "0.12", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
calamine = "0.26"
rust_xlsxwriter = "0.80"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
parquet = { version = "54", features = ["arrow"] }
arrow = "54"
apache-avro = "0.17"
toml = "0.8"
dirs = "5.0"
glob = "0.3.3"
clap_complete = "4.5.65"

# Optional API server dependencies
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", features = ["cors", "limit"], optional = true }

[features]
default = []
api = ["axum", "tower", "tower-http"]

[dev-dependencies]
tempfile = "3.12"

