[package]
name = "datacell"
version = "0.1.7"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/yingkitw/datacell"
readme = "README.md"
homepage = "https://github.com/yingkitw/datacell"
documentation = "https://docs.rs/datacell"
keywords = ["csv", "excel", "spreadsheet", "parquet", "cli"]
categories = [
    "command-line-utilities",
    "encoding",
    "data-structures",
    "parsing",
    "development-tools"
]
description = """
A powerful CLI tool and library for spreadsheet manipulation with pandas-style operations.
Supports CSV, Excel (XLSX, XLS, ODS), Parquet, and Avro formats with formula evaluation,
data transformation, and comprehensive analytics capabilities.
"""

[[bin]]
name = "datacell"
path = "src/main.rs"

[lib]
name = "datacell"
path = "src/lib.rs"

[dependencies]
rmcp = { version = "0.14", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
calamine = "0.26"
zip = "2.2"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# schemars re-exported by rmcp
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
parquet = { version = "54", features = ["arrow"] }
arrow-array = "54"
arrow-schema = "54"
apache-avro = "0.17"
toml = "0.8"
dirs = "5.0"
glob = "0.3.3"
clap_complete = "4.5.65"
rayon = "1.10"

# Google Sheets API dependencies (placeholder for future implementation)
# google-sheets4 = "5.0"
# yup-oauth2 = "8.3"
# hyper = "1.0"
# hyper-util = "0.1"
# http-body-util = "0.1"

# Optional API server dependencies
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "limit"], optional = true }

[features]
default = []
api = ["axum", "tower", "tower-http"]

[dev-dependencies]
tempfile = "3.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 3

